--- a/.github/workflows/h3c-nx30pro_hanwckf-immortalwrt.yml
+++ b/.github/workflows/h3c-nx30pro_hanwckf-immortalwrt.yml
@@ -14,7 +14,7 @@
 #limitations under the License.
 #
 
-name: h3c-nx30pro_hanwckf-immortalwrt
+name: 360T7_hanwckf-immortalwrt
 
 on:
   workflow_dispatch:
@@ -22,11 +22,11 @@ on:
 env:
   REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
   REPO_BRANCH: openwrt-21.02
-  FEEDS_CONF_FILE: h3c-nx30pro/hanwckf-immortalwrt/feeds.conf.default
-  CONFIG_FILE: h3c-nx30pro/hanwckf-immortalwrt/.config
-  MOD_PART1_SH: h3c-nx30pro/hanwckf-immortalwrt/part1.sh
-  MOD_PART2_SH: h3c-nx30pro/hanwckf-immortalwrt/part2.sh
-  MOD_PART3_SH: h3c-nx30pro/hanwckf-immortalwrt/part3.sh
+  FEEDS_CONF_FILE: 360T7/hanwckf-immortalwrt/feeds.conf.default
+  CONFIG_FILE: 360T7/hanwckf-immortalwrt/.config
+  MOD_PART1_SH: 360T7/hanwckf-immortalwrt/part1.sh
+  MOD_PART2_SH: 360T7/hanwckf-immortalwrt/part2.sh
+  MOD_PART3_SH: 360T7/hanwckf-immortalwrt/part3.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
@@ -40,7 +40,7 @@ env:
     uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
 jobs:
   build:
-    name: 编译H3C NX30Pro固件
+    name: 编译360T7固件
     runs-on: ubuntu-20.04
 
     steps:
@@ -170,7 +170,7 @@ jobs:
         id: tag
         if: env.UPLOAD_RELEASE == 'true' && !cancelled()
         run: |
-          echo "release_tag=h3c_nx30pro-Hanwckf_Immortalwrt-$(date +"%Y%m%d_%H%M")" >> "$GITHUB_OUTPUT"
+          echo "release_tag=360T7-Hanwckf_Immortalwrt-$(date +"%Y%m%d_%H%M")" >> "$GITHUB_OUTPUT"
           touch release.txt
           echo "STATUS=success" >> "$GITHUB_OUTPUT"
 
